[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 128
# select = ["E", "F"]
select = [
  "E",  # pycodestyle (includes missing newline at EOF, etc.)
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort (import sorting)
 # "D",  # pydocstyle
 # "UP", # pyupgrade
 # "PT", # pytest-style
  "Q",  # quote-conventions
 # "PL", # pylint (useful for layout, blank lines, etc.)
]
ignore = ["E741"]